--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "localforage": "^1.10.0",
+    "mobx-react": "^9.2.0",
     "mobx-state-tree": "^7.0.1",
     "next": "15.1.4",
     "react": "^19.0.0",
